# prefect-gcp-batch

./: .gitignore  README.md  pyproject.toml
examples/: Dockerfile  README.md  mandelbrot_flow.py  prefect.yaml
prefect_gcp_batch/: __init__.py  worker.py
tests/: test_worker.py
